fix - Polimento do layout e adição do código js

--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
         </div>
     </header>
     <main>
-        <section class="home-section">
+        <section class="home-section" id="home-ca">
             <div class="container-xl home-content">
                 <div class="home-intro">
                     <p>Conheça os Cavaleiros de Bronze, a base do exército da deusa Atena</p>
                     <a class="btn-default">Veja mais</a>
                 </div>
                 <div class="btn-box">
-                    <a class="btn-home">1</a>
-                    <a class="btn-home">2</a>
-                    <a class="btn-home">3</a>
-                    <a class="btn-home">4</a>
+                    <a class="btn-home" id="btn-andromeda">1</a>
+                    <a class="btn-home" id="btn-athena">2</a>
+                    <a class="btn-home" id="btn-cancer">3</a>
+                    <a class="btn-home" id="btn-sorento">4</a>
                 </div>
             </div>
             <div class="row-box">
