--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- OWL CAROUSEL -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+    
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
+   
     <title>Saint Seya</title>
 </head>
 <body>
@@ -18,7 +23,7 @@
         <div class="container-xl header-content">
             <div class="header-box">
                 <img src="images/logo.png" alt="logo Saint Seya">
-                <ul>
+                <ul class="nav-links">
                     <li><a href="#">Cavaleiros de Atena</a></li>
                     <li><a href="#">Os 88 cavaleiros</a></li>
                     <li><a href="#">Os 12 dourados</a></li>
@@ -30,23 +35,31 @@
     </header>
     <main>
         <section class="home-section" id="home-ca">
-            <div class="container-xl home-content">
-                <div class="home-intro">
-                    <p>Conheça os Cavaleiros de Bronze, a base do exército da deusa Atena</p>
-                    <a class="btn-default">Veja mais</a>
-                </div>
-                <div class="btn-box">
-                    <a class="btn-home" id="btn-andromeda">1</a>
-                    <a class="btn-home" id="btn-athena">2</a>
-                    <a class="btn-home" id="btn-cancer">3</a>
-                    <a class="btn-home" id="btn-sorento">4</a>
-                </div>
-            </div>
-            <div class="row-box">
-                <a><img src="/images/seta destaque.png"></a>
+            <div class="container-fluid p-0" home-box>
+                    <div class="owl-carousel owl-theme" id="carousel-home">
+                        <div class="item"><img src="/images/destaqueone.png" alt=""></div>
+                        <div class="item"><img src="/images/destaque 2.png" alt=""></div>
+                        <div class="item"><img src="/images/destaque 3.png" alt=""></div>
+                        <div class="item"><img src="/images/destaque 4.png" alt=""></div>
+                    </div>
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer class="footer-box">
+        <div class="container-xl footer-content">
+            <img src="/images/logo.png" alt="">
+            <ul class="nav-links footer">
+                <li><a href="#">Cavaleiros de Atena</a></li>
+                <li><a href="#">Os 88 cavaleiros</a></li>
+                <li><a href="#">Os 12 dourados</a></li>
+                <li><a href="#">As 12 casas</a></li>
+                <li><a href="#">Seja um cavaleiro!</a></li>
+            </ul>
+        </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
