fix - Correção no botão dots

--- a/index.html
+++ b/index.html
@@ -1,37 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- BOOTSTRAP -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <!-- OWL CAROUSEL -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
-   
+
     <title>Saint Seya</title>
 </head>
+
 <body>
     <header class="header-area">
         <div class="container-xl header-content">
             <div class="header-box">
                 <img src="images/logo.png" alt="logo Saint Seya">
-                <ul class="nav-links">
-                    <li><a href="#">Cavaleiros de Atena</a></li>
-                    <li><a href="#">Os 88 cavaleiros</a></li>
-                    <li><a href="#">Os 12 dourados</a></li>
-                    <li><a href="#">As 12 casas</a></li>
-                    <li><a href="#">Seja um cavaleiro!</a></li>
-                </ul>
-                <div class="hamburguer-menu">
-                    <i class="bi bi-list"></i>
+                <div class="links-area">
+                    <div class="hamburguer-menu" id="hamburguerbtn">
+                        <i class="bi bi-list"></i>
+                    </div>
+                    <ul class="nav-links" id="linksul">
+                        <li><a href="#">Cavaleiros de Atena</a></li>
+                        <li><a href="#">Os 88 cavaleiros</a></li>
+                        <li><a href="#">Os 12 dourados</a></li>
+                        <li><a href="#">As 12 casas</a></li>
+                        <li><a href="#">Seja um cavaleiro!</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -39,6 +47,12 @@
     <main>
         <section class="home-section" id="home-ca">
             <div class="home-box">
+                <div class="container-xl">
+                <div class="box-text">
+                    <h2>Conheça os Cavaleiros de Bronze, a base do exército da deusa Atena</h2>
+                    <a class="btn btn-primary" href="#" role="button">Veja mais</a>
+                </div>
+            </div>
                 <div class="owl-carousel owl-theme">
                     <div class="item destaque-1"></div>
                     <div class="item destaque-2"></div>
@@ -51,5 +65,21 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="js/script.js"></script>
+
+
+    <script>
+
+        function contador() {
+            const buttonsowl = document.querySelectorAll(".owl-dot");
+            console.log(buttonsowl);
+
+            for (var i = 0; i < buttonsowl.length; i++) {
+                console.log(i)
+            };
+        }
+
+        contador();
+    </script>
 </body>
+
 </html>
