--- a/index.html
+++ b/index.html
@@ -62,6 +62,78 @@
             </div>
 
         </section>
+
+        <section class="bio">
+            <div class="c__bio container-xl">
+                <h2>Cavaleiros de Atena</h2>
+                <p>
+                    Os Cavaleiros de Atena (アテナの聖闘士セイント do japonês, "Santos de Atena"?) são o exército de Atena, 
+                    a deusa da sabedoria, que protegem a paz na Terra e que, até a Guerra Galática, eram desconhecidos pelos humanos 
+                    e eram só lendas da mitologia grega pra eles. Eles estão por trás de todas as vitórias inexplicáveis em guerras 
+                    travadas entre humanos durante a história. Vindo dos quatro cantos do mundo, eles são dotados de força e coragem. 
+                    Fiéis a Atena, que odeia armas, seus corpos são a única arma que dispõem para lutar (há exceções). Eles são capazes 
+                    de romper o céu com as mãos e abrir fendas na terra com seus chutes. Sempre que as forças do mal se manifestam, os Cavaleiros de Atena 
+                    aparecem para combate-las. Eles treinam seus corpos além do limite humano, até que os punhos sejam capazes de cortar o ar e partir a terra, 
+                    e se protegem com Armaduras sagradas. O seu Cosmo elevado produz um destrutivo soco que rompe a barreira do som, chegando a esmigalhar blocos de concreto. 
+                    São seres milagrosos que conhecem as mais diversas técnicas de luta, que fogem à imaginação humana. Todos os seus atos são supervisionados e comandados pelo Santuário da Grécia, 
+                    que não se submete a nenhuma organização. O objetivo e a missão desses Cavaleiros é um só desde a época dos deuses: proteger a deusa Atena e garantir a paz na Terra. Os escolhidos são treinados em sigilo sob a tutela de um mestre indicado pelo Santuário (que ensinam tudo sobre luta à eles) e, quando comprovada sua qualificação, recebem uma das Armaduras. A cada Cavaleiro é designada uma Armadura, conforme o destino de sua estrela. Ou seja, não lhe basta adquirir a força de um Cavaleiro: é necessário que a mereça. Habilidade, personalidade, destino e outras condições misturam-se e apenas aqueles que possuem a combinação ideal têm o direito de se tornar Cavaleiros. A probabilidade de nascimento de um Cavaleiro é quase tão remota quanto cálculos astronômicos.
+                </p>
+
+                <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        Lista dos Cavaleiros de Ouro
+                    </button>
+                    </h2>
+                    <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Áries, Touro, Gêmeos, Câncer, Leão, Virgem, Libra, Escorpião, Sagitário, Capricórnio, Aquário e Peixes.</div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                        Lista dos Cavaleiros de Prata
+                    </button>
+                    </h2>
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Aeson de Taça (desertou para servir a deusa Éris) • Algethi de Hércules • Algol de Perseu • Asterion de Cães de Caça • Babel de Centauro • Capella de Cocheiro • Daidalos de Cefeu • Dante de Cérbero • Dio de Mosca • Georg de Cruzeiro do Sul • Jamian de Corvo • Jorge de Fornalha (Guardião da Ilha da Rainha da Morte, mais conhecido como Guilty) • Juan de Escudo • Lodi'N de Escultor (criador da máscara de Jorge de Fornalha e de Shina de Ofiúco) • Marin de Águia • Mayura de Pavão • Misty de Lagarto • Moses de Baleia • Nicol de Altar • Noesis de Triângulo (falecido) • Orphée de Lira • Ptolemy de Flecha • Rigel de Órion (desertou para servir a deusa Éris) • Shaina de Ofiúco • Sirius de Cão Maior</div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                        Lista dos Cavaleiros de Bronze
+                    </button>
+                    </h2>
+                    <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Seiya de Pégaso, Shiryu de Dragão, Hyoga de Cisne, Shun de Andrômeda e Ikki de Fênix. Além deles, existem outros cavaleiros de bronze como Jabu de Unicórnio, Ichi de Hidra, Geki de Urso, Nachi de Lobo e Ban de Leão Menor. June de Camaleão</div>
+                    </div>
+                </div>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="c__characters">
+            <div class="container-xl">
+                <div class="owl-carousel owl-theme characters-carousel">
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer></footer>
@@ -79,6 +151,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"> </script>
     <script src="js/script.js"></script>
 
 
