feat: Adição de nova seção e correção no layout

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+    <!-- Fancy Box -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css" />
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -189,6 +191,40 @@
             </div>
         </section>
 
+        <section class="c__houses">
+            <divc class="c__houses__box">
+                <h2>As doze casas</h2>
+                <div class="owl-carousel owl-theme houses-carousel">
+                    <div class="item aries-house">
+                        <a href="image-a.jpeg" data-fancybox data-caption="Single image">
+                            <img src="./images/fancybox 01 casa_aries.png" />
+                        </a>
+                    </div>
+                    <div class="item touro-house"></div>
+                    <div class="item gemeos-house"></div>
+                    <div class="item cancer-house"></div>
+                    <div class="item leao-house"></div>
+                    <div class="item virgem-house"></div>
+                    <div class="item libra-house"></div>
+                    <div class="item escorpiao-house"></div>
+                    <div class="item sagitario-house"></div>
+                    <div class="item capricornio-house"></div>
+                    <div class="item aquario-house"></div>
+                    <div class="item peixes-houses"></div>
+                </div>
+
+                <div class="slider-nav">
+                    <button class="am-next btn-default">
+                        <i class="bi bi-chevron-left"></i>
+                    </button>
+                    <button class="am-prev btn-default">
+                        <i class="bi bi-chevron-right"></i>
+                    </button>
+                </div>
+
+            </div>
+        </section>
+
 
 
     </main>
@@ -209,6 +245,7 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.umd.js"></script>
     <script src="js/script.js"></script>
 
 
