--- a/index.html
+++ b/index.html
@@ -353,7 +353,22 @@
 
     </main>
 
-    <footer></footer>
+    <footer class="c__links">
+        <section class="container c__links__box">
+            <div>
+                <img src="./images/logo.png">
+            </div>
+            <div class="footer__links">
+                <ul class="row">
+                    <li class="col-4"><a>Cavaleiros de Atena</a></li>
+                    <li class="col-4"><a>Os 88 cavaleiros</a></li>
+                    <li class="col-4"><a>Os 12 dourados</a></li>
+                    <li class="col-4"><a>As 12 casas</a></li>
+                    <li class="col-4"><a>Seja um cavaleiro!</a></li>
+                </ul>
+            </div>
+        </section>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
