fix: Correções no layout

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!-- OWL CAROUSEL -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet"
@@ -52,10 +50,29 @@
     <main>
         <section class="home">
             <div class="owl-carousel owl-theme home-carousel">
-                <div class="item-one__carousel background__carousel"></div>
-                <div class="item-two__carousel background__carousel"></div>
-                <div class="item-three__carousel background__carousel"></div>
-                <div class="item-four__carousel background__carousel"></div>
+                <div class="item-one__carousel background__carousel">
+                    <div class="home__degrade">
+                        <img src="./images/degradê destaque.png" alt="Degradê inferior da home">
+                    </div>
+                </div>
+
+                <div class="item-two__carousel background__carousel">
+                    <div class="home__degrade">
+                        <img src="./images/degradê destaque.png" alt="Degradê inferior da home">
+                    </div>
+                </div>
+
+                <div class="item-three__carousel background__carousel">
+                    <div class="home__degrade">
+                        <img src="./images/degradê destaque.png" alt="Degradê inferior da home">
+                    </div>
+                </div>
+
+                <div class="item-four__carousel background__carousel">
+                    <div class="home__degrade">
+                        <img src="./images/degradê destaque.png" alt="Degradê inferior da home">
+                    </div>
+                </div>
             </div>
 
             <div class="home__container container-xl">
@@ -66,12 +83,8 @@
             <a href="#bio" class="arrow__down">
                 <img src="./images/seta destaque.png" alt="Seta para baixo">
             </a>
-
-            <div class="home__degrade">
-                <img src="./images/degradê destaque.png" alt="Degradê inferior da home">
-            </div>
-
         </section>
+
 
         <section class="bio" id="bio">
             <div class="c__bio container-xl">
@@ -353,7 +366,22 @@
 
     </main>
 
-    <footer></footer>
+    <footer class="c__links">
+        <section class="container c__links__box">
+            <div>
+                <img src="./images/logo.png">
+            </div>
+            <div class="footer__links">
+                <ul class="row">
+                    <li class="col-4"><a>Cavaleiros de Atena</a></li>
+                    <li class="col-4"><a>Os 88 cavaleiros</a></li>
+                    <li class="col-4"><a>Os 12 dourados</a></li>
+                    <li class="col-4"><a>As 12 casas</a></li>
+                    <li class="col-4"><a>Seja um cavaleiro!</a></li>
+                </ul>
+            </div>
+        </section>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
